tests/es6modules/es6modules.exp
Error ---------------------------------------------------------------------------------------------- es6modules.js:10:18

Cannot assign `DefaultA.numberValue1` to `a2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:10:18
   10| var a2: string = DefaultA.numberValue1; // Error: number ~> string
                        ^^^^^^^^^^^^^^^^^^^^^

References:
   ProvidesModuleA.js:6:24
    6| exports.numberValue1 = 42;
                              ^^ [1]
   es6modules.js:10:9
   10| var a2: string = DefaultA.numberValue1; // Error: number ~> string
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:15:18

Cannot assign `DefaultB.numberValue` to `b2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:15:18
   15| var b2: string = DefaultB.numberValue; // Error: number ~> string
                        ^^^^^^^^^^^^^^^^^^^^

References:
   B.js:3:23
    3| exports.numberValue = 42;
                             ^^ [1]
   es6modules.js:15:9
   15| var b2: string = DefaultB.numberValue; // Error: number ~> string
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:18:22

Cannot resolve module `C`. [cannot-resolve-module]

   18| import DefaultC from "C"; // Error: No such module
                            ^^^


Error ---------------------------------------------------------------------------------------------- es6modules.js:21:22

Cannot resolve module `./D`. [cannot-resolve-module]

   21| import DefaultD from "./D"; // Error: No such module
                            ^^^^^


Error ----------------------------------------------------------------------------------------------- es6modules.js:27:9

Cannot import `doesntExist1` because there is no `doesntExist1` export in `CommonJS_Clobbering_Lit`. [missing-export]

   27| import {doesntExist1} from "CommonJS_Clobbering_Lit"; // Error: Not an exported binding
               ^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- es6modules.js:31:18

Cannot assign `numberValue1` to `c2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:31:18
   31| var c2: string = numberValue1; // Error: number ~> string
                        ^^^^^^^^^^^^

References:
   CommonJS_Clobbering_Lit.js:7:17
    7|   numberValue1: 1,
                       ^ [1]
   es6modules.js:31:9
   31| var c2: string = numberValue1; // Error: number ~> string
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:35:18

Cannot assign `numVal1` to `d2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:35:18
   35| var d2: string = numVal1; // Error: number ~> string
                        ^^^^^^^

References:
   CommonJS_Clobbering_Lit.js:8:17
    8|   numberValue2: 2,
                       ^ [1]
   es6modules.js:35:9
   35| var d2: string = numVal1; // Error: number ~> string
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:39:18

Cannot assign `CJS_Clobb_Lit.numberValue3` to `e2` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:39:18
   39| var e2: string = CJS_Clobb_Lit.numberValue3; // Error: number ~> string
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   CommonJS_Clobbering_Lit.js:9:17
    9|   numberValue3: 3,
                       ^ [1]
   es6modules.js:39:9
   39| var e2: string = CJS_Clobb_Lit.numberValue3; // Error: number ~> string
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:40:15

Cannot get `CJS_Clobb_Lit.doesntExist` because property `doesntExist` is missing in object literal [1]. [prop-missing]

   es6modules.js:40:15
   40| CJS_Clobb_Lit.doesntExist; // Error: doesntExist isn't a property
                     ^^^^^^^^^^^

References:
   CommonJS_Clobbering_Lit.js:6:18
                        v
    6| module.exports = {
    7|   numberValue1: 1,
    8|   numberValue2: 2,
    9|   numberValue3: 3,
   10|   numberValue4: 4,
   11|   numberValue5: 5
   12| };
       ^ [1]


Error ---------------------------------------------------------------------------------------------- es6modules.js:45:26

Cannot get `CJS_Clobb_Lit_NS.default.default` because property `default` is missing in object literal [1].
[prop-missing]

   es6modules.js:45:26
   45| CJS_Clobb_Lit_NS.default.default; // Error: No 'default' property on the exported obj
                                ^^^^^^^

References:
   CommonJS_Clobbering_Lit.js:6:18
                        v
    6| module.exports = {
    7|   numberValue1: 1,
    8|   numberValue2: 2,
    9|   numberValue3: 3,
   10|   numberValue4: 4,
   11|   numberValue5: 5
   12| };
       ^ [1]


Error ---------------------------------------------------------------------------------------------- es6modules.js:46:18

Cannot assign `CJS_Clobb_Lit_NS.numberValue4` to `f3` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:46:18
   46| var f3: string = CJS_Clobb_Lit_NS.numberValue4; // Error: number ~> string
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   CommonJS_Clobbering_Lit.js:10:17
   10|   numberValue4: 4,
                       ^ [1]
   es6modules.js:46:9
   46| var f3: string = CJS_Clobb_Lit_NS.numberValue4; // Error: number ~> string
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:47:18

Cannot assign `CJS_Clobb_Lit_NS.default.numberValue5` to `f4` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:47:18
   47| var f4: string = CJS_Clobb_Lit_NS.default.numberValue5; // Error: number ~> string
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   CommonJS_Clobbering_Lit.js:11:17
   11|   numberValue5: 5
                       ^ [1]
   es6modules.js:47:9
   47| var f4: string = CJS_Clobb_Lit_NS.default.numberValue5; // Error: number ~> string
               ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- es6modules.js:53:9

Cannot import `doesntExist2` because there is no `doesntExist2` export in `CommonJS_Clobbering_Class`. Did you mean
`import doesntExist2 from "..."`? [missing-export]

   53| import {doesntExist2} from "CommonJS_Clobbering_Class"; // Error: Not an exported binding
               ^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- es6modules.js:59:9

Cannot import `staticNumber1` because there is no `staticNumber1` export in `CommonJS_Clobbering_Class`. Did you mean
`import staticNumber1 from "..."`? [missing-export]

   59| import {staticNumber1, baseProp, childProp} from "CommonJS_Clobbering_Class"; // Error
               ^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- es6modules.js:59:24

Cannot import `baseProp` because there is no `baseProp` export in `CommonJS_Clobbering_Class`. Did you mean
`import baseProp from "..."`? [missing-export]

   59| import {staticNumber1, baseProp, childProp} from "CommonJS_Clobbering_Class"; // Error
                              ^^^^^^^^


Error ---------------------------------------------------------------------------------------------- es6modules.js:59:34

Cannot import `childProp` because there is no `childProp` export in `CommonJS_Clobbering_Class`. Did you mean
`import childProp from "..."`? [missing-export]

   59| import {staticNumber1, baseProp, childProp} from "CommonJS_Clobbering_Class"; // Error
                                        ^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- es6modules.js:63:23

Cannot get `(new CJS_Clobb_Class()).doesntExist` because property `doesntExist` is missing in `Test` [1]. [prop-missing]

   es6modules.js:63:23
   63| new CJS_Clobb_Class().doesntExist; // Error: Class has no `doesntExist` property
                             ^^^^^^^^^^^

References:
   es6modules.js:63:1
   63| new CJS_Clobb_Class().doesntExist; // Error: Class has no `doesntExist` property
       ^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- es6modules.js:65:18

Cannot assign `CJS_Clobb_Class.staticNumber2()` to `h2` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:65:18
   65| var h2: string = CJS_Clobb_Class.staticNumber2(); // Error: number ~> string
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   CommonJS_Clobbering_Class.js:14:26
   14|   static staticNumber2():number { return 2; }
                                ^^^^^^ [1]
   es6modules.js:65:9
   65| var h2: string = CJS_Clobb_Class.staticNumber2(); // Error: number ~> string
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:67:18

Cannot assign `(new CJS_Clobb_Class()).instNumber1()` to `h4` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:67:18
   67| var h4: string = new CJS_Clobb_Class().instNumber1(); // Error: number ~> string
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   CommonJS_Clobbering_Class.js:17:17
   17|   instNumber1():number { return 1; }
                       ^^^^^^ [1]
   es6modules.js:67:9
   67| var h4: string = new CJS_Clobb_Class().instNumber1(); // Error: number ~> string
               ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- es6modules.js:70:5

Cannot call `CJS_Clobb_Class_NS` because module `CommonJS_Clobbering_Class` [1] is not a function. [not-a-function]

   es6modules.js:70:5
   70| new CJS_Clobb_Class_NS(); // Error: Namespace object isn't constructable
           ^^^^^^^^^^^^^^^^^^

References:
   es6modules.js:69:1
   69| import * as CJS_Clobb_Class_NS from "CommonJS_Clobbering_Class";
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- es6modules.js:71:37

Cannot call `CJS_Clobb_Class_NS.staticNumber3` because property `staticNumber3` is missing in module
`CommonJS_Clobbering_Class` [1]. [prop-missing]

   es6modules.js:71:37
   71| var i1: number = CJS_Clobb_Class_NS.staticNumber3(); // Error: Class statics not copied to Namespace object
                                           ^^^^^^^^^^^^^

References:
   es6modules.js:69:1
   69| import * as CJS_Clobb_Class_NS from "CommonJS_Clobbering_Class";
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- es6modules.js:73:18

Cannot assign `(new CJS_Clobb_Class_NS.default()).instNumber2()` to `i3` because number [1] is incompatible with
string [2]. [incompatible-type]

   es6modules.js:73:18
   73| var i3: string = new CJS_Clobb_Class_NS.default().instNumber2(); // Error: number ~> string
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   CommonJS_Clobbering_Class.js:18:17
   18|   instNumber2():number { return 2; }
                       ^^^^^^ [1]
   es6modules.js:73:9
   73| var i3: string = new CJS_Clobb_Class_NS.default().instNumber2(); // Error: number ~> string
               ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- es6modules.js:79:9

Cannot import `doesntExist3` because there is no `doesntExist3` export in `CommonJS_Named`. [missing-export]

   79| import {doesntExist3} from "CommonJS_Named"; // Error: Not an exported binding
               ^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- es6modules.js:83:18

Cannot assign `numberValue2` to `j2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:83:18
   83| var j2: string = numberValue2; // Error: number ~> string
                        ^^^^^^^^^^^^

References:
   CommonJS_Named.js:7:24
    7| exports.numberValue2 = 2;
                              ^ [1]
   es6modules.js:83:9
   83| var j2: string = numberValue2; // Error: number ~> string
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:87:18

Cannot assign `numVal3` to `k2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:87:18
   87| var k2: string = numVal3; // Error: number ~> string
                        ^^^^^^^

References:
   CommonJS_Named.js:8:24
    8| exports.numberValue3 = 3;
                              ^ [1]
   es6modules.js:87:9
   87| var k2: string = numVal3; // Error: number ~> string
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:91:18

Cannot assign `CJS_Named.numberValue1` to `l2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:91:18
   91| var l2: string = CJS_Named.numberValue1; // Error: number ~> string
                        ^^^^^^^^^^^^^^^^^^^^^^

References:
   CommonJS_Named.js:6:24
    6| exports.numberValue1 = 1;
                              ^ [1]
   es6modules.js:91:9
   91| var l2: string = CJS_Named.numberValue1; // Error: number ~> string
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:92:11

Cannot get `CJS_Named.doesntExist` because property `doesntExist` is missing in module `CommonJS_Named` [1].
[prop-missing]

   es6modules.js:92:11
   92| CJS_Named.doesntExist; // Error: doesntExist isn't a property
                 ^^^^^^^^^^^

References:
   es6modules.js:89:1
   89| import * as CJS_Named from "CommonJS_Named";
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- es6modules.js:96:18

Cannot assign `CJS_Named_NS.default.numberValue4` to `m2` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:96:18
   96| var m2: string = CJS_Named_NS.default.numberValue4; // Error: CommonJS_Named has no default export
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   CommonJS_Named.js:9:24
    9| exports.numberValue4 = 4;
                              ^ [1]
   es6modules.js:96:9
   96| var m2: string = CJS_Named_NS.default.numberValue4; // Error: CommonJS_Named has no default export
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:97:18

Cannot assign `CJS_Named_NS.numberValue4` to `m3` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:97:18
   97| var m3: string = CJS_Named_NS.numberValue4; // Error: number ~> string
                        ^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   CommonJS_Named.js:9:24
    9| exports.numberValue4 = 4;
                              ^ [1]
   es6modules.js:97:9
   97| var m3: string = CJS_Named_NS.numberValue4; // Error: number ~> string
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:103:9

Cannot import `doesntExist4` because there is no `doesntExist4` export in `ES6_Default_AnonFunction1`. Did you mean
`import doesntExist4 from "..."`? [missing-export]

   103| import {doesntExist4} from "ES6_Default_AnonFunction1"; // Error: Not an exported binding
                ^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------------- es6modules.js:107:18

Cannot assign `ES6_Def_AnonFunc1()` to `n2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:107:18
   107| var n2: string = ES6_Def_AnonFunc1(); // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^^

References:
   ES6_Default_AnonFunction1.js:6:27
     6| export default function():number { return 42; }
                                  ^^^^^^ [1]
   es6modules.js:107:9
   107| var n2: string = ES6_Def_AnonFunc1(); // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:111:18

Cannot assign `ES6_Def_NamedFunc1()` to `o2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:111:18
   111| var o2: string = ES6_Def_NamedFunc1(); // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Default_NamedFunction1.js:6:31
     6| export default function foo():number { return 42; }
                                      ^^^^^^ [1]
   es6modules.js:111:9
   111| var o2: string = ES6_Def_NamedFunc1(); // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:115:18

Cannot assign `(new ES6_Def_AnonClass1()).givesANum()` to `p2` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:115:18
   115| var p2: string = new ES6_Def_AnonClass1().givesANum(); // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Default_AnonClass1.js:6:37
     6| export default class { givesANum(): number { return 42; }};
                                            ^^^^^^ [1]
   es6modules.js:115:9
   115| var p2: string = new ES6_Def_AnonClass1().givesANum(); // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:119:18

Cannot assign `(new ES6_Def_NamedClass1()).givesANum()` to `q2` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:119:18
   119| var q2: string = new ES6_Def_NamedClass1().givesANum(); // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Default_NamedClass1.js:6:41
     6| export default class Foo { givesANum(): number { return 42; }};
                                                ^^^^^^ [1]
   es6modules.js:119:9
   119| var q2: string = new ES6_Def_NamedClass1().givesANum(); // Error: number ~> string
                ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:125:8

Cannot import a default export because there is no default export in `ES6_Named1`. [missing-export]

   125| import doesntExist5 from "ES6_Named1"; // Error: Not an exported binding
               ^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------------- es6modules.js:129:18

Cannot assign `specifierNumber1_1` to `r2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:129:18
   129| var r2: string = specifierNumber1_1; // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^

References:
   ES6_Named1.js:6:26
     6| const specifierNumber1 = 1;
                                 ^ [1]
   es6modules.js:129:9
   129| var r2: string = specifierNumber1_1; // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:133:18

Cannot assign `specifierNumber2Renamed` to `s2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:133:18
   133| var s2: string = specifierNumber2Renamed; // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named1.js:7:26
     7| const specifierNumber2 = 2;
                                 ^ [1]
   es6modules.js:133:9
   133| var s2: string = specifierNumber2Renamed; // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:137:18

Cannot assign `specifierNumber3Renamed` to `t2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:137:18
   137| var t2: string = specifierNumber3Renamed; // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named1.js:8:26
     8| const specifierNumber3 = 3;
                                 ^ [1]
   es6modules.js:137:9
   137| var t2: string = specifierNumber3Renamed; // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:142:18

Cannot assign `groupedSpecifierNumber1` to `u3` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:142:18
   142| var u3: string = groupedSpecifierNumber1; // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named1.js:9:33
     9| const groupedSpecifierNumber1 = 1;
                                        ^ [1]
   es6modules.js:142:9
   142| var u3: string = groupedSpecifierNumber1; // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:143:18

Cannot assign `groupedSpecifierNumber2` to `u4` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:143:18
   143| var u4: string = groupedSpecifierNumber2; // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named1.js:10:33
    10| const groupedSpecifierNumber2 = 2;
                                        ^ [1]
   es6modules.js:143:9
   143| var u4: string = groupedSpecifierNumber2; // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:147:18

Cannot assign `givesANumber()` to `v2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:147:18
   147| var v2: string = givesANumber(); // Error: number ~> string
                         ^^^^^^^^^^^^^^

References:
   ES6_Named1.js:17:33
    17| export function givesANumber(): number { return 42; };
                                        ^^^^^^ [1]
   es6modules.js:147:9
   147| var v2: string = givesANumber(); // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:151:18

Cannot assign `(new NumberGenerator()).givesANumber()` to `w2` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:151:18
   151| var w2: string = new NumberGenerator().givesANumber(); // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named1.js:18:48
    18| export class NumberGenerator { givesANumber(): number { return 42; }};
                                                       ^^^^^^ [1]
   es6modules.js:151:9
   151| var w2: string = new NumberGenerator().givesANumber(); // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:156:18

Cannot assign `varDeclNumber1` to `x3` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:156:18
   156| var x3: string = varDeclNumber1; // Error: number ~> string
                         ^^^^^^^^^^^^^^

References:
   ES6_Named1.js:20:31
    20| export const varDeclNumber1 = 1, varDeclNumber2 = 2;
                                      ^ [1]
   es6modules.js:156:9
   156| var x3: string = varDeclNumber1; // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:157:18

Cannot assign `varDeclNumber2` to `x4` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:157:18
   157| var x4: string = varDeclNumber2; // Error: number ~> string
                         ^^^^^^^^^^^^^^

References:
   ES6_Named1.js:20:51
    20| export const varDeclNumber1 = 1, varDeclNumber2 = 2;
                                                          ^ [1]
   es6modules.js:157:9
   157| var x4: string = varDeclNumber2; // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:161:18

Cannot assign `destructuredObjNumber` to `y2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:161:18
   161| var y2: string = destructuredObjNumber; // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named1.js:21:64
    21| export const {destructuredObjNumber} = {destructuredObjNumber: 1};
                                                                       ^ [1]
   es6modules.js:161:9
   161| var y2: string = destructuredObjNumber; // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:165:18

Cannot assign `destructuredArrNumber` to `z2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:165:18
   165| var z2: string = destructuredArrNumber; // Error: number ~> string
                         ^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named1.js:22:41
    22| export const [destructuredArrNumber] = [1]
                                                ^ [1]
   es6modules.js:165:9
   165| var z2: string = destructuredArrNumber; // Error: number ~> string
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:169:19

Cannot assign `numberValue4` to `aa2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:169:19
   169| var aa2: string = numberValue4; // Error: number ~> string
                          ^^^^^^^^^^^^

References:
   ES6_ExportFrom_Source1.js:6:29
     6| export const numberValue1 = 1, numberValue2 = 2;
                                    ^ [1]
   es6modules.js:169:10
   169| var aa2: string = numberValue4; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:173:19

Cannot assign `numberValue2_renamed` to `ab2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:173:19
   173| var ab2: string = numberValue2_renamed; // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^^

References:
   ES6_ExportFrom_Source1.js:6:47
     6| export const numberValue1 = 1, numberValue2 = 2;
                                                      ^ [1]
   es6modules.js:173:10
   173| var ab2: string = numberValue2_renamed; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:177:19

Cannot assign `numberValue5` to `ac2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:177:19
   177| var ac2: string = numberValue5; // Error: number ~> string
                          ^^^^^^^^^^^^

References:
   ES6_ExportAllFrom_Source1.js:6:29
     6| export const numberValue1 = 1;
                                    ^ [1]
   es6modules.js:177:10
   177| var ac2: string = numberValue5; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:183:38

Cannot get `require(...).doesntExist` because property `doesntExist` is missing in module
`ES6_Default_AnonFunction2` [1]. [prop-missing]

   es6modules.js:183:38
   183| require('ES6_Default_AnonFunction2').doesntExist; // Error: 'doesntExist' isn't an export
                                             ^^^^^^^^^^^

References:
   es6modules.js:183:1
   183| require('ES6_Default_AnonFunction2').doesntExist; // Error: 'doesntExist' isn't an export
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------------------- es6modules.js:187:19

Cannot assign `ES6_Def_AnonFunc2()` to `ad2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:187:19
   187| var ad2: string = ES6_Def_AnonFunc2(); // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^

References:
   ES6_Default_AnonFunction2.js:6:27
     6| export default function():number { return 42; }
                                  ^^^^^^ [1]
   es6modules.js:187:10
   187| var ad2: string = ES6_Def_AnonFunc2(); // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:191:19

Cannot assign `ES6_Def_NamedFunc2()` to `ae2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:191:19
   191| var ae2: string = ES6_Def_NamedFunc2(); // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Default_NamedFunction2.js:6:31
     6| export default function foo():number { return 42; }
                                      ^^^^^^ [1]
   es6modules.js:191:10
   191| var ae2: string = ES6_Def_NamedFunc2(); // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:195:19

Cannot assign `(new ES6_Def_AnonClass2()).givesANum()` to `af2` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:195:19
   195| var af2: string = new ES6_Def_AnonClass2().givesANum(); // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Default_AnonClass2.js:6:37
     6| export default class { givesANum(): number { return 42; }};
                                            ^^^^^^ [1]
   es6modules.js:195:10
   195| var af2: string = new ES6_Def_AnonClass2().givesANum(); // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:199:19

Cannot assign `(new ES6_Def_NamedClass2()).givesANum()` to `ag2` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:199:19
   199| var ag2: string = new ES6_Def_NamedClass2().givesANum(); // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Default_NamedClass2.js:6:41
     6| export default class Foo { givesANum(): number { return 42; }};
                                                ^^^^^^ [1]
   es6modules.js:199:10
   199| var ag2: string = new ES6_Def_NamedClass2().givesANum(); // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:207:19

Cannot assign `specifierNumber4` to `ah2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:207:19
   207| var ah2: string = specifierNumber4; // Error: number ~> string
                          ^^^^^^^^^^^^^^^^

References:
   ES6_Named2.js:6:26
     6| const specifierNumber4 = 1;
                                 ^ [1]
   es6modules.js:207:10
   207| var ah2: string = specifierNumber4; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:211:19

Cannot assign `specifierNumber5Renamed` to `ai2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:211:19
   211| var ai2: string = specifierNumber5Renamed; // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named2.js:7:26
     7| const specifierNumber5 = 2;
                                 ^ [1]
   es6modules.js:211:10
   211| var ai2: string = specifierNumber5Renamed; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:217:19

Cannot assign `groupedSpecifierNumber3` to `aj3` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:217:19
   217| var aj3: string = groupedSpecifierNumber3; // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named2.js:8:33
     8| const groupedSpecifierNumber3 = 1;
                                        ^ [1]
   es6modules.js:217:10
   217| var aj3: string = groupedSpecifierNumber3; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:218:19

Cannot assign `groupedSpecifierNumber4` to `aj4` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:218:19
   218| var aj4: string = groupedSpecifierNumber4; // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named2.js:9:33
     9| const groupedSpecifierNumber4 = 2;
                                        ^ [1]
   es6modules.js:218:10
   218| var aj4: string = groupedSpecifierNumber4; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:222:19

Cannot assign `givesANumber2()` to `ak2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:222:19
   222| var ak2: string = givesANumber2(); // Error: number ~> string
                          ^^^^^^^^^^^^^^^

References:
   ES6_Named2.js:15:34
    15| export function givesANumber2(): number { return 42; };
                                         ^^^^^^ [1]
   es6modules.js:222:10
   222| var ak2: string = givesANumber2(); // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:226:19

Cannot assign `(new NumberGenerator2()).givesANumber()` to `al2` because number [1] is incompatible with string [2].
[incompatible-type]

   es6modules.js:226:19
   226| var al2: string = new NumberGenerator2().givesANumber(); // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named2.js:16:49
    16| export class NumberGenerator2 { givesANumber(): number { return 42; }};
                                                        ^^^^^^ [1]
   es6modules.js:226:10
   226| var al2: string = new NumberGenerator2().givesANumber(); // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:232:19

Cannot assign `varDeclNumber3` to `am3` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:232:19
   232| var am3: string = varDeclNumber3; // Error: number ~> string
                          ^^^^^^^^^^^^^^

References:
   ES6_Named2.js:18:31
    18| export const varDeclNumber3 = 1, varDeclNumber4 = 2;
                                      ^ [1]
   es6modules.js:232:10
   232| var am3: string = varDeclNumber3; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:233:19

Cannot assign `varDeclNumber4` to `am4` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:233:19
   233| var am4: string = varDeclNumber4; // Error: number ~> string
                          ^^^^^^^^^^^^^^

References:
   ES6_Named2.js:18:51
    18| export const varDeclNumber3 = 1, varDeclNumber4 = 2;
                                                          ^ [1]
   es6modules.js:233:10
   233| var am4: string = varDeclNumber4; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:237:19

Cannot assign `destructuredObjNumber2` to `an2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:237:19
   237| var an2: string = destructuredObjNumber2; // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named2.js:19:66
    19| export const {destructuredObjNumber2} = {destructuredObjNumber2: 1};
                                                                         ^ [1]
   es6modules.js:237:10
   237| var an2: string = destructuredObjNumber2; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:241:19

Cannot assign `destructuredArrNumber2` to `ao2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:241:19
   241| var ao2: string = destructuredArrNumber2; // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_Named2.js:20:42
    20| export const [destructuredArrNumber2] = [1]
                                                 ^ [1]
   es6modules.js:241:10
   241| var ao2: string = destructuredArrNumber2; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:245:19

Cannot assign `numberValue6` to `ap2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:245:19
   245| var ap2: string = numberValue6; // Error: number ~> string
                          ^^^^^^^^^^^^

References:
   ES6_ExportFrom_Source2.js:6:29
     6| export const numberValue1 = 1, numberValue2 = 2;
                                    ^ [1]
   es6modules.js:245:10
   245| var ap2: string = numberValue6; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:249:19

Cannot assign `numberValue2_renamed2` to `aq2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:249:19
   249| var aq2: string = numberValue2_renamed2; // Error: number ~> string
                          ^^^^^^^^^^^^^^^^^^^^^

References:
   ES6_ExportFrom_Source2.js:6:47
     6| export const numberValue1 = 1, numberValue2 = 2;
                                                      ^ [1]
   es6modules.js:249:10
   249| var aq2: string = numberValue2_renamed2; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:253:19

Cannot assign `numberValue7` to `ar2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:253:19
   253| var ar2: string = numberValue7; // Error: number ~> string
                          ^^^^^^^^^^^^

References:
   ES6_ExportAllFrom_Source2.js:6:29
     6| export const numberValue2 = 1;
                                    ^ [1]
   es6modules.js:253:10
   253| var ar2: string = numberValue7; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:262:19

Cannot assign `defaultNum` to `as2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:262:19
   262| var as2: string = defaultNum; // Error: number ~> string
                          ^^^^^^^^^^

References:
   ES6_DefaultAndNamed.js:3:16
     3| export default 42;
                       ^^ [1]
   es6modules.js:262:10
   262| var as2: string = defaultNum; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:265:19

Cannot assign `namedStr` to `as4` because string [1] is incompatible with number [2]. [incompatible-type]

   es6modules.js:265:19
   265| var as4: number = namedStr; // Error: string ~> number
                          ^^^^^^^^

References:
   ES6_DefaultAndNamed.js:4:20
     4| export const str = 'asdf';
                           ^^^^^^ [1]
   es6modules.js:265:10
   265| var as4: number = namedStr; // Error: string ~> number
                 ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:276:8

Cannot import a default export because there is no default export in `ES6_Named1`. Did you mean
`import {specifierNumber1} from "ES6_Named1"`? [missing-export]

   276| import specifierNumber1 from "ES6_Named1"; // Error: Did you mean `import {specifierNumber1} from ...`?
               ^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- es6modules.js:277:9

Cannot import `specifierNumber` because there is no `specifierNumber` export in `ES6_Named1`. Did you mean
`specifierNumber1`? [missing-export]

   277| import {specifierNumber} from "ES6_Named1"; // Error: Did you mean `specifierNumber1`?
                ^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------------- es6modules.js:288:19

Cannot assign `numberValue8` to `at2` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:288:19
   288| var at2: string = numberValue8; // Error: number ~> string
                          ^^^^^^^^^^^^

References:
   ES6_ExportAllFrom_Source1.js:6:29
     6| export const numberValue1 = 1;
                                    ^ [1]
   es6modules.js:288:10
   288| var at2: string = numberValue8; // Error: number ~> string
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- es6modules.js:291:19

Cannot assign `numberValue9` to `at4` because number [1] is incompatible with string [2]. [incompatible-type]

   es6modules.js:291:19
   291| var at4: string = numberValue9; // Error: number ~> string
                          ^^^^^^^^^^^^

References:
   ES6_ExportAllFrom_Source2.js:6:29
     6| export const numberValue2 = 1;
                                    ^ [1]
   es6modules.js:291:10
   291| var at4: string = numberValue9; // Error: number ~> string
                 ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es6modules.js:296:9

Cannot import the type `typeAlias` as a value. Use `import type` instead. [import-type-as-value]

   296| import {typeAlias} from "./ExportType"; // Error: Cannot vanilla-import a type alias!
                ^^^^^^^^^


Error ---------------------------------------------------------------------------------- test_imports_are_frozen.js:9:10

Cannot assign `123` to `DefaultA.numberValue1` because property `numberValue1` is not writable. [cannot-write]

   9| DefaultA.numberValue1 = 123; // Error: DefaultA is frozen
               ^^^^^^^^^^^^


Error --------------------------------------------------------------------------------- test_imports_are_frozen.js:13:12

Cannot assign `123` to `ES6_Named1.varDeclNumber1` because property `varDeclNumber1` is not writable. [cannot-write]

   13| ES6_Named1.varDeclNumber1 = 123; // Error: ES6_Named1 is frozen
                  ^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------- test_imports_are_frozen.js:17:15

Cannot assign `123` to `CommonJS_Star.numberValue1` because property `numberValue1` is not writable. [cannot-write]

   17| CommonJS_Star.numberValue1 = 123; // Error: frozen
                     ^^^^^^^^^^^^


Error --------------------------------------------------------------------------------- test_imports_are_frozen.js:25:22

Cannot assign `123` to `CommonJS_Frozen_Star.numberValue1` because property `numberValue1` is not writable.
[cannot-write]

   25| CommonJS_Frozen_Star.numberValue1 = 123; // Error: frozen
                            ^^^^^^^^^^^^


Error --------------------------------------------------------------------------------- test_imports_are_frozen.js:26:30

Cannot assign `123` to `CommonJS_Frozen_Star.default.numberValue1` because property `numberValue1` is not writable.
[cannot-write]

   26| CommonJS_Frozen_Star.default.numberValue1 = 123; // Error: frozen
                                    ^^^^^^^^^^^^


Error --------------------------------------------------------------------------------- test_imports_are_frozen.js:29:28

Cannot assign `123` to `CommonJS_Clobbering_Frozen.numberValue1` because property `numberValue1` is not writable.
[cannot-write]

   29| CommonJS_Clobbering_Frozen.numberValue1 = 123; // Error: exports are frozen
                                  ^^^^^^^^^^^^


Error --------------------------------------------------------------------------------- test_imports_are_frozen.js:39:12

Cannot assign `123` to `DefaultA.numberValue1` because property `numberValue1` is not writable. [cannot-write]

   39|   DefaultA.numberValue1 = 123; // error: prop is not writable
                  ^^^^^^^^^^^^


Error --------------------------------------------------------------------------------- test_imports_are_frozen.js:43:14

Cannot assign `123` to `ES6_Named1.numberValue` because property `numberValue` is not writable. [cannot-write]

   43|   ES6_Named1.numberValue = 123; // error, es6 exports are frozen
                    ^^^^^^^^^^^


Error --------------------------------------------------------------------------------- test_imports_are_frozen.js:51:24

Cannot assign `123` to `CommonJS_Frozen_Star.numberValue1` because property `numberValue1` is not writable.
[cannot-write]

   51|   CommonJS_Frozen_Star.numberValue1 = 123; // Error: frozen
                              ^^^^^^^^^^^^



Found 83 errors
